# foveance

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bench  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
bench/: analyze.py  analyze_A.py  compare_baselines.py  fetch_longbench.py  make_pareto.py  merge_results.py  overhead.py  plot_baselines.py  plots.py  report.md  run_bench.py  tasks.py
bench/results/: ablations.csv  by_seed.csv  greedy_gap.csv  headline.json  pareto.csv  per_turn.csv  summary.csv
bench/results_baselines/: drift_twin_audit.json  llama_trajectory.csv  single_shot.csv
docs/: NOVELTY.md  architecture.md  baselines.md  index.md  limitations.md  theory.md  usage.md
examples/: foveance_quickstart.ipynb  langchain_demo.py  wrap_ollama.py  wrap_openai.py
npm/: README.md  package.json
scripts/: make_comparison_gifs.py  make_demo_gif.py  make_logo.py  make_share_square.py  make_shrink_gif.py  make_social_card.py  make_twitter_header.py  run_everything.sh  run_full6_monitor.ps1  run_offline_demo.sh
src/foveance/: __init__.py  allocator.py  baselines.py  cli.py  compressors.py  controller.py  embedders.py  learned.py  llm.py  metrics.py  predictor.py  proxy.py  store.py
tests/: test_allocator.py  test_baselines_extra.py  test_controller.py  test_integration.py  test_modules.py  test_predictor.py  test_property.py  test_proxy_integration.py  test_shrink.py  test_store.py  test_wrap_and_dashboard.py
